--- a/package.json
+++ b/package.json
@@ -9,4 +9,8 @@
   "keywords": ["azure", "keyvault", "docker", "emulator"],
   "author": "elaygl",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.2",
+    "morgan": "^1.9.0"
+  }
 }
