--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "scripts": {
     "start": "node src/index.js"
   },
-  "keywords": ["azure", "keyvault", "docker", "emulator"],
+  "keywords": [
+    "azure",
+    "keyvault",
+    "docker",
+    "emulator"
+  ],
   "author": "elaygl",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "morgan": "^1.9.0"
   }
